--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -176,7 +176,7 @@
       <div class="field">
         <label>
           Are there any special accommodations you would need from us?
-          *Note: This question does not get factored into how your application is read! 
+          <i>Note: This question does not get factored into how your application is read! </i>
         </label>
         <input type="text" ng-model="selectedUser.profile.specialAccomodations">
       </div>
