--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -105,18 +105,20 @@
                  ng-model="user.profile.minor">
         </div>
 
+        <p class="section description"> 
+          <i>
+            Please note: Our events are best viewed in EST - PST, but we’ll do our best to 
+            upload recordings as soon as possible for those joining from other 
+            time zones, as well as spread out our activities throughout the day. 
+          </i>
+        </p>
+
         <div class="field">
-          <label>What timezone will you most likely be attending the event from? <span class="required">*</span></label>
+          <label>What timezone will you most likely be attending the event from (ex. EST, PST)?<span class="required">*</span></label>
           <input type="text"
                  placeholder="Timezone"
                  ng-model="user.profile.timezone">
         </div>
-
-        <p class="section description"> 
-          Please note: Our events are best viewed in EST - PST, but we’ll do our best to 
-          upload recordings as soon as possible for those joining from other 
-          time zones, as well as spread out our activities throughout the day. 
-        </p>
 
         <div class="field">
           <label>Shirt size? <span class="required">*</span> </label>
@@ -147,7 +149,7 @@
         <div class="field">
             <label>
               Are there any special accommodations you would need from us? <br>
-              *Note: This question does not get factored into how your application is read! 
+              <i>Note: This question does not get factored into how your application is read! </i>
             </label>
             <input type="text"
                    placeholder="Special Accomodations"
@@ -223,8 +225,10 @@
         <div class="divided title">Team Formation</div>
         
         <p class="section description"> 
-          *Note: These questions do not get factored into how your application is read! 
-          If you are part of a team, we will accept/reject your team together.
+          <i>
+            Note: These questions do not get factored into how your application is read! 
+            If you are part of a team, we will accept/reject your team together.
+          </i>
         </p>
 
         <br>
