--- a/app/client/views/team/team.html
+++ b/app/client/views/team/team.html
@@ -5,8 +5,15 @@
   
   <div class="ui stackable centered page grid">
     <div class="column">
-      <p> To join or create a team, please enter the team name below. Please note that team names are <strong>case sensitive</strong>! Make sure you confirm that everyone on your team is as expected.</p>
-      <p> Don't have a team?  Don't worry! At the event, we'll be having a team formation event where you'll meet fellow attendees and create a team on the day. </p>
+      <p> 
+        To join or create a team, please enter the team name below. Please note that team names are 
+        <strong>case sensitive</strong>! Make sure you confirm that everyone on your team is as expected.
+        There is no size limit on teams, but our prizes will be designed for teams of five or fewer. 
+      </p>
+      <p> 
+        Don't have a team?  Don't worry! At the event, we'll be having a team formation event where 
+        you'll meet fellow attendees and create a team on the day. 
+      </p>
       <div
         class="ui error message"
         ng-show="error">
