Add cabin description to application.

--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -294,6 +294,15 @@
 
         <br>
 
+        <p class="section description"> 
+          <i>
+            As part of our camping theme this year, you will be split up into different virtual cabins. 
+            You will be given the chance to compete with your cabin in exciting competitions throughout 
+            the event to win the Cabin Cup! You will also have cabin counselors to guide you through the 
+            event as well as a way to get to know the rest of your cabin mates! 
+          </i>
+        </p>
+
         <div class="checkbox-label">
           Which of the following workshops/activities would you be excited for? 
           <span class="required">*</span> 
